--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
 dev = [
     "ipykernel==6.29.5",
     "black==24.8.0",
-    "ruff==0.6.8"
+    "ruff==0.6.8",
+    "pytest==8.3.2"
 ]
 
 [tool.setuptools]
